# Neural-Object-Detection

./: CMakeLists.txt  TODO  aibo.cpp  aibocam.cpp  aibocam.h  aibofocus.cpp  aibofocus.h  aiboremote.cpp  aiboremote.h  aiboremote.ui  aibowebcam.cpp  camera.cpp  gng.py  gngapp.cpp  gngapp.h  gngdists.py  gngtest.cpp  gngviewer.cpp  gngviewer.h  image.cpp  image_gng.py  imageseries.cpp  plotter.py  presentation_demos.sh  viewer.ui  webcamtest.cpp
config/: gng-camera.cfg  gng-image.cfg  gng-imageseries.cfg  webcamtest.cfg
latex/: .gitignore  final-paper.tex  final-proposal.tex  final-report.tex  midterm-report.tex  references.bib
libaibo/: CMakeLists.txt  aibo.cpp  aibo.h  aibocamera.cpp  aibocamera.h  aibocontrol.cpp  aibocontrol.h
libgng/: CMakeLists.txt  aibosource.cpp  aibosource.h  camerasource.cpp  camerasource.h  edge.cpp  edge.h  gng.cpp  gng.h  imagegenerator.cpp  imagegenerator.h  imagesource.cpp  imagesource.h  node.cpp  node.h  opencvtest.cpp  point.cpp  point.h  pointgenerator.h  pointsource.h  subgraph.cpp  subgraph.h
